route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route1
spec:
  host: nuthman-openshift.clu-nuthman.cern.ch
  port:
    targetPort: 80
  to:
    kind: Service
    name: nginx-service
